<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/white_theme_radio_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/welcome_page_margin"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"><!--TODO custom view or fragment-->

            <RadioButton
                android:id="@+id/white_theme_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/welcome_page_margin" />

            <TextView
                android:id="@+id/white_theme_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/white_theme_radio"
                android:layout_toEndOf="@+id/white_theme_radio"
                android:layout_toRightOf="@+id/white_theme_radio"
                android:text="@string/white_theme_text"
                android:textSize="@dimen/welcome_page_choose_theme_text_size" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/black_theme_radio_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/welcome_page_margin"
        android:layout_weight="1"
        app:cardBackgroundColor="@android:color/darker_gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/black_theme_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/welcome_page_margin" />

            <TextView
                android:id="@+id/black_theme_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/black_theme_radio"
                android:layout_toEndOf="@+id/black_theme_radio"
                android:layout_toRightOf="@+id/black_theme_radio"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/black_theme_text"
                android:textSize="@dimen/welcome_page_choose_theme_text_size" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</merge>