<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/welc_tabbs"
            style="@style/Widget.AppCompat.ActionBar.TabBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top" />
    </android.support.v4.view.ViewPager>

    <include
        layout="@layout/next_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>